# FlipHouse

./: .dockerignore  .env.example  .gitignore  DEPLOY-RUNBOOK.md  README.md  ROADMAP.md  STATE.md  eslint.config.mjs  package.json  pnpm-lock.yaml  railway.json  tsconfig.base.json  tsconfig.json  vitest.config.ts
docs/: 00-MASTER-FlipHouse.md  01-АРХИТЕКТУРА-И-RAILWAY.md  02-ДИЗАЙН-И-МОУШЕН.md  03-ОФФЕРЫ-И-ВСТАВКА-РЕКЛАМЫ.md  (+2 more)
services/ai-worker-python/: .gitignore  package.json  pyproject.toml  requirements-dev.txt
services/ai-worker-python/fliphouse_worker/: __init__.py  concurrency.py  safe_zones.py  video_asserts.py
services/ai-worker-python/fliphouse_worker/captioning/: __init__.py  ass.py  burn.py  coverage.py  emoji.py  keywords.py  metrics.py  preset.py  segments.py
services/ai-worker-python/fliphouse_worker/cli/: __main__.py  _dispatch.py  _logging.py
services/ai-worker-python/fliphouse_worker/clipping/: __init__.py  active_speaker.py  asd_config.py  caption_band.py  crop_geometry.py  cutter.py  frontality.py  manifest.py  one_euro.py  preflight.py  punch.py  render.py  render_preflight.py  segments.py  smoothing.py  speaker_region.py
services/ai-worker-python/fliphouse_worker/dsp/: __init__.py  audio_energy.py  audio_flags.py  local_signals.py  scene_cuts.py
services/ai-worker-python/fliphouse_worker/engine/: __init__.py  align.py  align_rapidfuzz.py  cascade.py  constants.py  escalation.py  highlights.py  normalize.py  production_recall.py  punctuation.py  recall.py  rerank.py  scoring_fanout.py  segmenter.py  topic_seam.py
services/ai-worker-python/fliphouse_worker/eval/: __init__.py  av_dataset.py  boundary.py  cutover.py  dataset.py  metrics.py
services/ai-worker-python/fliphouse_worker/llm/: __init__.py  content_parts.py  engine_backend.py  openrouter_adapter.py  routes.py  schemas.py
services/ai-worker-python/fliphouse_worker/scoring/: __init__.py  aggregate.py  clip_scorer.py  cost_record.py  eval_runner.py  pricing.py  prompt.py  schema.py  threshold_calibration.py  tiers.py  viral_signals.py
services/ai-worker-python/fliphouse_worker/stages/: __init__.py  _registry.py  _types.py  artifacts.py  asr.py  asr_finalize.py  caption.py  clips_io.py  passthrough.py  r2.py  reframe.py  score.py  store.py  transcode.py  workspace.py
services/ai-worker-python/fliphouse_worker/transcription/: __init__.py  cloud.py  local_whisper.py  normalize.py  provider.py  raw_payload.py
services/ai-worker-python/scripts/: live_eval.py
services/ai-worker-python/tests/: conftest.py  test_codec_audio.py  test_concurrency.py  test_engine_highlights.py  test_pipeline_golden.py  test_safe_zones.py  test_video_asserts.py
services/ai-worker-python/tests/captioning/: test_ass.py  test_burn.py  test_contrast_band_live_golden.py  test_coverage.py  test_emoji.py  test_fade.py  test_keywords.py  test_metrics.py  test_pop.py  test_pop_live_golden.py  test_preset.py  test_segments.py
services/ai-worker-python/tests/cli/: test_dispatch.py  test_logging.py  test_main.py
services/ai-worker-python/tests/clipping/: test_active_speaker.py  test_asd_config.py  test_caption_band.py  test_crop_geometry.py  test_cutter.py  test_frontality.py  test_golden_matches_shared.py  test_manifest.py  test_one_euro.py  test_packaging.py  test_preflight.py  test_punch.py  test_punch_live_golden.py  test_render.py  test_render_preflight.py  test_segments.py  test_smoothing.py  test_speaker_region.py
services/ai-worker-python/tests/dsp/: test_audio_energy.py  test_audio_flags.py  test_local_signals.py  test_scene_cuts.py
services/ai-worker-python/tests/engine/: test_align.py  test_align_rapidfuzz.py  test_cascade.py  test_cascade_normalize.py  test_escalation.py  test_normalize.py  test_production_recall.py  test_punctuation.py  test_recall.py  test_rerank.py  test_scoring_fanout.py  test_segmenter.py  test_topic_seam.py
services/ai-worker-python/tests/eval/: test_av_dataset.py  test_boundary.py  test_cutover.py  test_cutover_frozen.py  test_dataset.py  test_metrics.py
services/ai-worker-python/tests/eval/fixtures/: cutover_snapshot.json
services/ai-worker-python/tests/llm/: test_content_parts.py  test_engine_backend.py  test_openrouter_adapter.py
services/ai-worker-python/tests/scoring/: conftest.py  test_aggregate.py  test_arc_prompt.py  test_cascade_eval.py  test_clip_scorer.py  test_cost_record.py  test_eval_integration.py  test_live_gemini_eval.py  test_pricing.py  test_schema_contract.py  test_threshold_calibration.py  test_threshold_eval.py  test_tiers.py  test_viral_signals.py
services/ai-worker-python/tests/stages/: _fakes.py  test_artifacts.py  test_asr.py  test_asr_finalize.py  test_build_handlers.py  test_caption_stage.py  test_clips_io.py  test_keyword_gate.py  test_passthrough.py  test_r2_helpers.py  test_r2_live.py  test_reframe.py  test_score.py  test_store.py  test_transcode.py  test_workspace.py
services/ai-worker-python/tests/transcription/: test_cloud.py  test_local_whisper_golden.py  test_normalize.py  test_provider_contract.py  test_raw_payload.py  test_select_provider.py
services/gpu-asd/: .gitignore  Dockerfile  README.md  lr_asd_eval.py  lr_asd_runner.py  modal_app.py  package.json  pyproject.toml  requirements-dev.txt
services/gpu-asd/fliphouse_asd/: __init__.py  app.py  config.py  contracts.py  errors.py  scoring.py  signing.py  validate.py
services/gpu-asd/tests/: _fakes.py  test_app.py  test_config.py  test_contracts.py  test_scoring.py  test_signing.py  test_validate.py
services/gpu-gigaam/: .gitignore  Dockerfile  README.md  modal_app.py  package.json  pyproject.toml  requirements-dev.txt
services/gpu-gigaam/fliphouse_gigaam/: __init__.py  align.py  app.py  audio.py  callback.py  config.py  contracts.py  errors.py  orchestrator.py  signing.py  status_store.py  transcribe.py  validate.py
services/gpu-gigaam/tests/: _fakes.py  test_align.py  test_app.py  test_audio.py  test_callback.py  test_config.py  test_contracts.py  test_errors.py  test_orchestrator.py  test_signing.py  test_status_store.py  test_transcribe.py  test_validate.py
(+350 files in other folders)
