[project]
name = "fliphouse-worker"
version = "0.0.0"
description = "FlipHouse AI worker — CPU render pipeline (clip/reframe/caption/banner)."
requires-python = ">=3.11"
dependencies = ["numpy>=2,<3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fliphouse_worker", "fliphouse_worker.engine", "fliphouse_worker.llm", "fliphouse_worker.eval", "fliphouse_worker.scoring", "fliphouse_worker.dsp", "fliphouse_worker.clipping"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]
# black owns line length; it intentionally leaves long string literals (e.g. the
# verbatim virality prompt) unwrapped, so disable E501 to avoid a formatter/linter
# standoff. Ruff's own guidance when pairing with a formatter.
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fliphouse_worker --cov-report=term-missing --cov-fail-under=100"
markers = ["live: opt-in tests that hit real external APIs (skipped unless env set)"]

[tool.coverage.run]
source = ["fliphouse_worker"]

[tool.coverage.report]
show_missing = true
