[project]
name = "fliphouse-worker"
version = "0.0.0"
description = "FlipHouse AI worker — CPU render pipeline (clip/reframe/caption/banner)."
requires-python = ">=3.11"
# boto3≥1.36 is REQUIRED: R2 rejects requests unless the new checksum knobs
# (request_checksum_calculation / response_checksum_validation = "when_required")
# are set, and those Config params only exist from botocore 1.36.
# imagehash is imported at package top level (video_asserts → __init__), so it is
# a base runtime dep, not optional — a Docker install without it fails at import.
dependencies = ["numpy>=2,<3", "boto3>=1.36,<2", "imagehash>=4.3,<5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# CPU fallback transcription — CTranslate2 runtime, int8, NO torch/CUDA (repo bans
# torch imports). Lazy-imported in transcription/local_whisper.py, so it is only
# needed on the real-model (live) path, never for the unit/golden tests.
transcription = ["faster-whisper>=1.0"]
# CPU vertical reframe — MediaPipe BlazeFace short-range, lazy-imported in
# speaker_region.py only on the live render path (never unit/golden). Pin
# opencv-python-headless to avoid the GUI OpenCV (libGL.so.1 → crash on the slim
# Railway image); the libgl1 apt layer is the real guarantee, not pip resolution.
reframe = ["mediapipe>=0.10", "opencv-python-headless>=4.9"]

[tool.setuptools]
packages = ["fliphouse_worker", "fliphouse_worker.engine", "fliphouse_worker.llm", "fliphouse_worker.eval", "fliphouse_worker.scoring", "fliphouse_worker.dsp", "fliphouse_worker.clipping", "fliphouse_worker.transcription", "fliphouse_worker.cli", "fliphouse_worker.stages", "fliphouse_worker.captioning"]

[project.scripts]
fliphouse-stage = "fliphouse_worker.cli.__main__:main"

# Ship the vendored BlazeFace model in the wheel — never downloaded at runtime.
[tool.setuptools.package-data]
"fliphouse_worker.clipping" = ["models/*.tflite"]
# Ship the vendored SIL-OFL Montserrat ExtraBold (+ its OFL licence) so the
# caption burn-in font is always present — fontconfig resolves it by family name.
"fliphouse_worker.captioning" = ["fonts/*.ttf", "fonts/OFL.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]
# black owns line length; it intentionally leaves long string literals (e.g. the
# verbatim virality prompt) unwrapped, so disable E501 to avoid a formatter/linter
# standoff. Ruff's own guidance when pairing with a formatter.
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fliphouse_worker --cov-report=term-missing --cov-fail-under=100"
markers = ["live: opt-in tests that hit real external APIs (skipped unless env set)"]

[tool.coverage.run]
source = ["fliphouse_worker"]
# Impure I/O harness (real stdin/stdout/process) — integration-only, not unit-tested.
omit = ["*/cli/__main__.py"]

[tool.coverage.report]
show_missing = true
