[project]
name = "fliphouse-worker"
version = "0.0.0"
description = "FlipHouse AI worker — CPU render pipeline (clip/reframe/caption/banner)."
requires-python = ">=3.11"
# boto3≥1.36 is REQUIRED: R2 rejects requests unless the new checksum knobs
# (request_checksum_calculation / response_checksum_validation = "when_required")
# are set, and those Config params only exist from botocore 1.36.
# imagehash (video_asserts → __init__) and openai (clipping → llm →
# openrouter_adapter) are imported at package top level, so a Docker install
# without them fails at import — they are base runtime deps, not optional.
# rapidfuzz (MIT, pure C/Python wheel, no model weights — ~1MB) backs the verbatim
# phrase→word-span aligner (engine/align_rapidfuzz.py) that anchors a clip's END to
# the LLM's complete-sentence end_phrase; it is on the live score path, so it is a
# base runtime dep, not optional. Licence is MIT (FuzzyWuzzy's GPL is deliberately
# avoided), keeping the all-MIT/Apache/BSD invariant on shipped deps.
dependencies = [
    "numpy>=2,<3",
    "boto3>=1.36,<2",
    "imagehash>=4.3,<5",
    "openai>=2,<3",
    "rapidfuzz>=3,<4",
    # P3-A3 — real hmtx glyph-advance widths for the caption pop frame-clamp
    # (Cyrillic is far wider than the Latin len·0.62 heuristic, so a true upper
    # bound is needed to guarantee a popped word never clips the 1080 frame).
    "fonttools>=4,<5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# CPU vertical reframe — PRIMARY detector YuNet (cv2.FaceDetectorYN, OpenCV Zoo,
# MIT) + MediaPipe BlazeFace short-range FALLBACK, both lazy-imported in
# speaker_region.py only on the live render path (never unit/golden). YuNet needs
# cv2.FaceDetectorYN, present in mainline OpenCV since 4.5.4 — the >=4.9 pin
# already covers it (no bump needed). Pin opencv-python-HEADLESS to avoid the GUI
# OpenCV (libGL.so.1 → crash on the slim Railway image); the libgl1 apt layer is
# the real guarantee, not pip resolution.
reframe = ["mediapipe>=0.10", "opencv-python-headless>=4.9"]

[tool.setuptools]
packages = ["fliphouse_worker", "fliphouse_worker.engine", "fliphouse_worker.llm", "fliphouse_worker.eval", "fliphouse_worker.scoring", "fliphouse_worker.dsp", "fliphouse_worker.clipping", "fliphouse_worker.transcription", "fliphouse_worker.cli", "fliphouse_worker.stages", "fliphouse_worker.captioning"]

[project.scripts]
fliphouse-stage = "fliphouse_worker.cli.__main__:main"

# Ship the vendored face-detection models in the wheel — never downloaded at
# runtime: BlazeFace (.tflite, MediaPipe fallback) + YuNet (.onnx, OpenCV Zoo MIT,
# the primary profile-aware detector).
[tool.setuptools.package-data]
"fliphouse_worker.clipping" = ["models/*.tflite", "models/*.onnx"]
# Ship the vendored SIL-OFL Montserrat ExtraBold (+ its OFL licence) so the
# caption burn-in font is always present — fontconfig resolves it by family name.
"fliphouse_worker.captioning" = ["fonts/*.ttf", "fonts/OFL.txt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]
# black owns line length; it intentionally leaves long string literals (e.g. the
# verbatim virality prompt) unwrapped, so disable E501 to avoid a formatter/linter
# standoff. Ruff's own guidance when pairing with a formatter.
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fliphouse_worker --cov-report=term-missing --cov-fail-under=100"
markers = ["live: opt-in tests that hit real external APIs (skipped unless env set)"]

[tool.coverage.run]
source = ["fliphouse_worker"]
# Impure I/O harness (real stdin/stdout/process) — integration-only, not unit-tested.
omit = ["*/cli/__main__.py"]

[tool.coverage.report]
show_missing = true
