[project]
name = "fliphouse-gigaam"
version = "0.0.0"
description = "FlipHouse GigaAM-v3 GPU transcription service — submit/status ASGI + signed webhook callback (SKELETON)."
requires-python = ">=3.11"
# The skeleton + unit suite have ZERO runtime deps (stdlib only). The live path
# needs gigaam (GPU weights), pyannote.audio (VAD), and httpx — all FOUNDER-GATED
# and lazy-imported inside the pragma'd seams, so CI never installs them.
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
# FOUNDER-GATED live path — see README. gigaam pulls torch/CUDA + the v3 weights,
# pyannote.audio is the VAD for transcribe_longform, httpx is the audio fetch +
# callback POST transport. None are importable in CI; the seams that use them are
# `# pragma: no cover`.
live = ["gigaam", "pyannote.audio", "httpx>=0.27"]

[tool.setuptools]
packages = ["fliphouse_gigaam"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle (E), Pyflakes (F), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "I", "UP", "B"]
# black owns line length.
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=fliphouse_gigaam --cov-report=term-missing --cov-fail-under=100"
markers = ["live: opt-in tests that need a GPU / live network (skipped in CI)"]

[tool.coverage.run]
source = ["fliphouse_gigaam"]

[tool.coverage.report]
show_missing = true
